Prevent horizontal scroll on mobile

--- a/src/assets/scss/layout.scss
+++ b/src/assets/scss/layout.scss
@@ -1,3 +1,7 @@
+body {
+  overflow: hidden;
+}
+
 .layout-section {
   padding-right: $space-default;
   padding-left: $space-default;
